--- a/Quanlibanhang.csproj
+++ b/Quanlibanhang.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="DB\QLLSP.db">
+    <None Update="DB\QLBH.db">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
