--- a/Quanlibanhang.csproj
+++ b/Quanlibanhang.csproj
@@ -12,13 +12,12 @@
     <PackageReference Include="Remote.Linq.Newtonsoft.Json" Version="7.2.2" />
     <PackageReference Include="SunnyUI" Version="3.9.0" />
     <PackageReference Include="SunnyUI.Common" Version="3.9.0" />
-    <PackageReference Include="System.Data.SQLite" Version="2.0.2" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="DB\QLLSP.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <None Update="DB\QLBH.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
